--- a/HistoGlobe_client/todo
+++ b/HistoGlobe_client/todo
@@ -1,8 +1,34 @@
-EDIT OPERATION WORKFLOW
-- in geometry step: Why is the next step button enabled after first polygon is drawn?
-- make all actions reversible
-- get abort button to work
-- border change: make sure two selected countries actually border each other
+prio effort [1 .. 3]
+
+GENERAL UI
+1 2 disable all tooltips after button clicked
+
+GENERAL EDIT OPERATION WORKFLOW
+1 2 fix whole selection/deselection mechanism
+1 3 make all actions reversible
+1 2 get abort button to work
+
+
+SELECTION STEP
+
+GEOMETRY STEP
+2 1 for CHB: make sure two selected countries actually border each other
+2 2 for SEP: next step button enabled after first polygon is drawn => clicking on it uses the rest of the geometry as old area that has not changed (same as clicking the area)
+1 3 for CHB: more intuitive workflow to change border vs. create new territory
+3 3 for CHB: does it work with >2 countries?
+
+NAME STEP
+3 1 unify Soviet Union -> name not visible (make it always in viewport)
+3 2 how to make obvious that name position can be changed
+
+HIVENT STEP
+3 1 explain term "Hivent"
+2 1 put "submit" button underneath Hivent Box
 
 MAP
-- label collision
+1 3 label collision
+
+
+
+"I HAVE NO IDEA WHAT TO DO"
+(A. Shepherd, 03.03.2016)
